fix: nav arrows on mobile

--- a/online-zoo-week1/sass/layout/_mobile.scss
+++ b/online-zoo-week1/sass/layout/_mobile.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: $mobile-large-width) {
+@media screen and (max-width: $mobile-small-width) {
 
 
     .header {
@@ -258,7 +258,8 @@
         height: 89px;
         align-self: flex-end;
         border: none;
-   
+        transform: rotate(0deg);
+
     }
 
     .section-4__button {
