--- a/online-zoo-week1/sass/layout/_tablet.scss
+++ b/online-zoo-week1/sass/layout/_tablet.scss
@@ -38,7 +38,9 @@
     }
 
     h1 {
-        font-size: 3rem;
+        font-size: 2rem;
+        margin-top: 0px;
+        padding-top: 15%;
     }
 
     .section-1__main-button {
